@@ -114,6 +114,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9854. Log cipher suite negotiation more verbosely
     (Wei-Chiu Chuang via cnauroth)
 
+    HDFS-8772. Fix TestStandbyIsHot#testDatanodeRestarts which occasionally fails.
+    (Walter Su via wang).
+
   OPTIMIZATIONS
 
     HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)
